fix: spacing issue for articles and thoughts
remove vertical centering and add min height for no gaps in footer

--- a/src/components/pages/thoughts/thoughts.css
+++ b/src/components/pages/thoughts/thoughts.css
@@ -1,6 +1,7 @@
 
 .thoughts {
     margin: 5%;
+    min-height: 76vh;
 }
 
 .thoughts-title__container {
